[package]
authors = ['murilooon <murilooon@gmail.com>']
edition = '2018'
name = 'pallet-kitties'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-randomness-collective-flip/std',
	'sp-io/std',
]
